# ysp_arduino

./: .clang-format  CMakeLists.txt  circular_buffer.h  pt8211_demo.ino  sine_voice.h
inc/ysp/container/: circular_buffer.h
inc/ysp/math/: constants.h  functor.h  interp.h  sine.h
inc/ysp/synth/: sine_voice.h  voice.h
libs/: CMakeLists.txt
src/ysp/math/: sine.cpp  sine_table_full.h  sine_table_quarter.h
test/: CMakeLists.txt
test/container/: circular_buffer.test.cpp
test/synth/: sine_voice.test.cpp
tools/: generate_sine_table.py
